apollo-federation/src/sources/connect/validation/snapshots/validation_tests@valid_entity_arg_field_arg_key_non_resolvable.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/valid_entity_arg_field_arg_key_non_resolvable.graphql
---
[]
