apollo-federation/src/sources/connect/validation/snapshots/validation_tests@valid_large_body.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/valid_large_body.graphql
---
[]
