apollo-federation/src/sources/connect/validation/snapshots/validation_tests@valid_no_connect_on_resolvable_key_field.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/valid_no_connect_on_resolvable_key_field.graphql
---
[]
