apollo-federation/src/sources/connect/validation/snapshots/validation_tests@valid_selection_arrow_methods.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/valid_selection_arrow_methods.graphql
---
[]
