apollo-federation/src/sources/connect/validation/snapshots/validation_tests@valid_selection_with_escapes.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/valid_selection_with_escapes.graphql
---
[
    Message {
        code: InvalidJsonSelection,
        message: "`@connect(selection:)` on `Query.block` is not a valid JSONSelection: Path selection . must be followed by key (identifier or quoted string literal): .",
        locations: [
            16:27..16:28,
        ],
    },
    Message {
        code: InvalidJsonSelection,
        message: "`@connect(selection:)` on `Query.standard` is not a valid JSONSelection: Path selection . must be followed by key (identifier or quoted string literal): .",
        locations: [
            22:77..22:78,
        ],
    },
]
