apollo-federation/src/sources/connect/validation/snapshots/validation_tests@valid_selections_with_escapes.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/valid_selections_with_escapes.graphql
---
[
    Message {
        code: InvalidJsonSelection,
        message: "`@connect(selection:)` on `Query.something` is not a valid JSONSelection: Path selection . must be followed by key (identifier or quoted string literal) at offset 7: .",
        locations: [
            18:26..18:27,
        ],
    },
]
